test/asm/use-label-outside-section.err
error: use-label-outside-section.asm(1):
    Label "lab" created outside of a SECTION
error: use-label-outside-section.asm(2):
    Expected constant expression: 'lab' is not constant at assembly time
Assembly aborted with 2 errors!
